# veronica

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  temp.py
tests/test_net/: conftest.py  manual_test.py  test_buffers.py  test_protocols.py
tests/test_transport/: manual_test.py
tests/test_utils/: test_decorators.py
tests/test_wrappers/: test_mqtt.py
veronica/: __init__.py  _version.py
veronica/base/: models.py
veronica/core/: app_lock.py  log.py  settings.py  singleton.py
veronica/core/log/: __init__.py  logging_handlers.py  loguru_config.py  loguru_handlers.py
veronica/encapsulation/: kafka.py  mqtt.py
veronica/fancy/: __init__.py
veronica/net/: buffers.py  connector.py  protocol.py  protocols.py  streams.py
veronica/transport/: __init__.py  connector.py  protocol.py  protocols.py
veronica/utils/: decorator.py  decorators.py  loader.py  loaders.py  metaclass.py
veronica/wrappers/: kafka.py  mqtt.py  redis.py
