[project]
name = "veronica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "filelock>=3.18.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.1.0",]
kafka = ["confluent-kafka>=2.10.0",]
