[project]
name = "veronica"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.11.0",
    "filelock>=3.18.0",
    "loguru>=0.7.3",
    "paho-mqtt>=2.1.0",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "setuptools-scm>=8.3.1",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
